
https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["Entdecken Sie das VMware Workloads-Planungscenter"]



== 3. August 2025



=== Verbesserte Migrationsberaterunterstützung für Amazon Elastic VMWare Service

Der Migrationsberater des Amazon Elastic VMware Service unterstützt jetzt die automatische Bereitstellung und Bereitstellung Ihres Amazon FSx for NetApp ONTAP Dateisystems.  Auf diese Weise können Sie mit der Bereitstellung Ihrer VMs auf FSx für ONTAP -Dateisystemen beginnen, wenn die Migration zur Amazon EVS-Umgebung abgeschlossen ist.

https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Erstellen Sie einen Bereitstellungsplan für Amazon EVS mit dem Migrationsberater"]



=== Berechnen Sie die Kosteneinsparungen durch die Migration zum Amazon Elastic VMware Service

Sie können jetzt die potenziellen Einsparungen durch die Migration Ihrer VMware-Workloads zu Amazon Elastic VMware Service (EVS) erkunden.  Mit dem Einsparungsrechner können Sie die Kosten für die Verwendung von Amazon EVS mit und ohne Amazon FSx for NetApp ONTAP als zugrunde liegenden Speicher vergleichen.  Der Rechner zeigt potenzielle Einsparungen in Echtzeit an, während Sie die Eigenschaften Ihrer Umgebung anpassen.

https://docs.netapp.com/us-en/workload-vmware/calculate-evs-savings.html["Entdecken Sie die Einsparungen für Amazon Elastic VMware Service mit BlueXP Workload Factory"]



== 29 Juni 2025



=== Einführung der Migrationsberater-Unterstützung für Amazon Elastic VMWare Service

BlueXP Workload Factory für VMware unterstützt jetzt Amazon Elastic VMware Service.  Mithilfe des Migrationsberaters können Sie Ihre lokalen VMware-Workloads schnell zum Amazon Elastic VMware Service migrieren. So optimieren Sie die Kosten und erhalten mehr Kontrolle über Ihre VMware-Umgebung, ohne dass Sie Ihre Anwendungen umgestalten oder auf eine neue Plattform umstellen müssen.
