@@ -474,7 +474,6 @@
   <block id="e4358de2a09588cec13214adc031a6e1" category="sidebar">Schnellstart für die Migration zu Amazon EVS</block>
   <block id="b217f7353b9ad5ed58a9d5b9ee531f78" category="sidebar">Migration zum Amazon Elastic VMware Service</block>
   <block id="424013c53fd9187a66e051bb44ddaa34" category="doc">Verbesserte Migrationsberaterunterstützung für Amazon Elastic VMWare Service</block>
-  <block id="37ac2db5bb5bc7f50e3b58bbb706b64b" category="paragraph">Der Migrationsberater des Amazon Elastic VMware Service unterstützt jetzt die automatische Bereitstellung und Bereitstellung Ihres Amazon FSx for NetApp ONTAP Dateisystems.  Auf diese Weise können Sie mit der Bereitstellung Ihrer VMs auf FSx für ONTAP -Dateisystemen beginnen, wenn die Migration zur Amazon EVS-Umgebung abgeschlossen ist.</block>
   <block id="93c34ab13f70b21f6935de45dacb9ae3" category="section-title">Berechnen Sie die Kosteneinsparungen durch die Migration zum Amazon Elastic VMware Service</block>
   <block id="b1da4fce8da5117e3a9e1041d1749074" category="paragraph">Sie können jetzt die potenziellen Einsparungen durch die Migration Ihrer VMware-Workloads zu Amazon Elastic VMware Service (EVS) erkunden.  Mit dem Einsparungsrechner können Sie die Kosten für die Verwendung von Amazon EVS mit und ohne Amazon FSx for NetApp ONTAP als zugrunde liegenden Speicher vergleichen.  Der Rechner zeigt potenzielle Einsparungen in Echtzeit an, während Sie die Eigenschaften Ihrer Umgebung anpassen.</block>
   <block id="89737fdc47d2ffa6f11712bb340e2a19" category="summary">Berechnen Sie, wie viel Sie durch die Verwendung von Amazon EVS mit FSx für ONTAP sparen können.</block>
@@ -512,12 +511,10 @@
   <block id="9d310bdb300e7bb1ef7cd5e2fc08e57b" category="paragraph">Diese Version von BlueXP Workload Factory für VMware bietet mehrere Verbesserungen für die Erfahrung des Amazon EC2-Migrationsberaters:</block>
   <block id="28ac5ecdafc5d6be71f28783b5d53cc6" category="paragraph">Diese Version von BlueXP Workload Factory für VMware bietet die folgenden Verbesserungen für die Erfahrung des Amazon EC2-Migrationsberaters:</block>
   <block id="962abee1b74c5d5ab5f9bd0c47cbb068" category="paragraph">In der Benutzeroberfläche und Dokumentation von Workload Factory wird jetzt „schreibgeschützt“ für Leseberechtigungen und „Lesen/Schreiben“ für automatisierte Berechtigungen verwendet.</block>
-  <block id="50d3ff7077038387799b7b34d964df08" category="paragraph">BlueXP Workload Factory für VMware unterstützt jetzt Amazon Elastic VMware Service.  Mithilfe des Migrationsberaters können Sie Ihre lokalen VMware-Workloads schnell zum Amazon Elastic VMware Service migrieren. So optimieren Sie die Kosten und erhalten mehr Kontrolle über Ihre VMware-Umgebung, ohne dass Sie Ihre Anwendungen umgestalten oder auf eine neue Plattform umstellen müssen.</block>
   <block id="041a7335d4bfbe01ea8a2d2f780732b6" category="inline-link">Entdecken Sie die Einsparungen für Amazon Elastic VMware Service mit BlueXP Workload Factory</block>
   <block id="1a1b8cfea3181a2937851fe76b4862d4" category="paragraph"><block ref="1a1b8cfea3181a2937851fe76b4862d4" category="inline-link-rx"></block></block>
   <block id="2bbead322f2dd5c4a40fbd66537e304f" category="doc">BlueXP workload factory jetzt NetApp Workload Factory</block>
   <block id="9c80606adc6065bc48c6d99fbb8c3f1d" category="paragraph">BlueXP wurde umbenannt und neu gestaltet, um seine Rolle bei der Verwaltung Ihrer Dateninfrastruktur besser widerzuspiegeln. Aus diesem Grund wurde die BlueXP workload factory in NetApp Workload Factory umbenannt.</block>
-  <block id="b77ed2f5662201a26b98b92e98329049" category="section-title">Einführung des VMware Workloads Planning Center</block>
   <block id="2dd03fc740a72e1c5fc0daf9be122249" category="paragraph">Mit dem VMware Workloads-Planungscenter können Sie Ihr VM-Inventar und Ihre Migrationspläne von einem Ort aus anzeigen und verwalten.  Sie können mehrere VM-Inventare aus unterschiedlichen Umgebungen hochladen und speichern und für jedes davon mit der Planung einer Migration zu AWS EC2 oder dem Amazon Elastic VMware-Dienst beginnen.  Sie können auch AWS EC2- oder EVS-Migrationspläne erstellen und speichern.</block>
   <block id="420ac911d98022d5289d3f00ff38ea84" category="inline-link">Entdecken Sie das VMware Workloads-Planungscenter</block>
   <block id="81ee9955f68100a5e460b3f794e65e9b" category="paragraph"><block ref="81ee9955f68100a5e460b3f794e65e9b" category="inline-link-rx"></block></block>
@@ -733,4 +730,9 @@
   <block id="3c031b939f6ec312ee601d021e7a6644" category="sidebar">NetApp Konsole</block>
   <block id="cc58d3a9b2264c4fd8cb1d3f61b90bdc" category="sidebar">NetApp Datenservices</block>
   <block id="93ba13882942e9f41461a4867481e012" category="sidebar">Verwenden Sie das VMware-Planungscenter</block>
+  <block id="98d4c7385c3e640287a91e3032b576c3" category="paragraph">BlueXP Workload Factory für VMware unterstützt jetzt Amazon Elastic VMware Service. Sie können Ihre lokalen VMware-Workloads manuell zum Amazon Elastic VMware Service migrieren, wodurch die Kosten optimiert werden und Sie mehr Kontrolle über Ihre VMware-Umgebung erhalten, ohne Ihre Anwendungen umgestalten oder auf eine neue Plattform umstellen zu müssen.</block>
+  <block id="dcf522fe0928ea448e17a8ccb7b14d76" category="paragraph">NetApp Workload Factory unterstützt jetzt die automatische Bereitstellung und Einbindung Ihres Amazon FSx for NetApp ONTAP Dateisystems.  Auf diese Weise können Sie mit der Bereitstellung Ihrer VMs auf FSx für ONTAP -Dateisystemen beginnen, wenn die Migration zur Amazon EVS-Umgebung abgeschlossen ist.</block>
+  <block id="74f9db7fefcf8c24332761c003d46a02" category="section-title">Einführung des VMware Workloads Planning Center</block>
+  <block id="c1ed477ef5d58aa5d9931821badda717" category="paragraph">Mit BlueXP Workload Factory für VMware können Sie jetzt den Migrationsberater des Amazon Elastic VMware Service verwenden, um Ihre lokalen VMware-Workloads schnell zum Amazon Elastic VMware Service zu migrieren.  Nachdem Sie mit dem Migrationsberater einen Migrationsplan erstellt haben, wird dieser automatisch in der Liste der Migrationspläne im Planungscenter gespeichert.</block>
+  <block id="c2ec0e17d82dd73344c2ef80a6de22f1" category="paragraph"><block ref="c2ec0e17d82dd73344c2ef80a6de22f1" category="inline-link-rx"></block></block>
 </blocks>
