@@ -33,13 +33,21 @@ https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["Entd
 
 
 
+=== Einführung der Migrationsberater-Unterstützung für Amazon Elastic VMWare Service
+
+Mit BlueXP Workload Factory für VMware können Sie jetzt den Migrationsberater des Amazon Elastic VMware Service verwenden, um Ihre lokalen VMware-Workloads schnell zum Amazon Elastic VMware Service zu migrieren.  Nachdem Sie mit dem Migrationsberater einen Migrationsplan erstellt haben, wird dieser automatisch in der Liste der Migrationspläne im Planungscenter gespeichert.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs.html["Erstellen Sie einen Bereitstellungsplan für Amazon EVS mit dem Migrationsberater"]
+
+
+
 == 3. August 2025
 
 
 
 === Verbesserte Migrationsberaterunterstützung für Amazon Elastic VMWare Service
 
-Der Migrationsberater des Amazon Elastic VMware Service unterstützt jetzt die automatische Bereitstellung und Bereitstellung Ihres Amazon FSx for NetApp ONTAP Dateisystems.  Auf diese Weise können Sie mit der Bereitstellung Ihrer VMs auf FSx für ONTAP -Dateisystemen beginnen, wenn die Migration zur Amazon EVS-Umgebung abgeschlossen ist.
+NetApp Workload Factory unterstützt jetzt die automatische Bereitstellung und Einbindung Ihres Amazon FSx for NetApp ONTAP Dateisystems.  Auf diese Weise können Sie mit der Bereitstellung Ihrer VMs auf FSx für ONTAP -Dateisystemen beginnen, wenn die Migration zur Amazon EVS-Umgebung abgeschlossen ist.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Erstellen Sie einen Bereitstellungsplan für Amazon EVS mit dem Migrationsberater"]
 
@@ -59,7 +67,7 @@ https://docs.netapp.com/us-en/workload-vmware/calculate-evs-savings.html["Entdec
 
 === Einführung der Migrationsberater-Unterstützung für Amazon Elastic VMWare Service
 
-BlueXP Workload Factory für VMware unterstützt jetzt Amazon Elastic VMware Service.  Mithilfe des Migrationsberaters können Sie Ihre lokalen VMware-Workloads schnell zum Amazon Elastic VMware Service migrieren. So optimieren Sie die Kosten und erhalten mehr Kontrolle über Ihre VMware-Umgebung, ohne dass Sie Ihre Anwendungen umgestalten oder auf eine neue Plattform umstellen müssen.
+BlueXP Workload Factory für VMware unterstützt jetzt Amazon Elastic VMware Service. Sie können Ihre lokalen VMware-Workloads manuell zum Amazon Elastic VMware Service migrieren, wodurch die Kosten optimiert werden und Sie mehr Kontrolle über Ihre VMware-Umgebung erhalten, ohne Ihre Anwendungen umgestalten oder auf eine neue Plattform umstellen zu müssen.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Erstellen Sie einen Bereitstellungsplan für Amazon EVS mit dem Migrationsberater"]
 
